# ik-hxr-cms-backend

./: .env  .gitignore  README.md  app.py  cdk.json  pyproject.toml  requirements-dev.txt  requirements.txt
database/dyanamodb/tables/: application.py
ik_hxr_cms_backend/: ik_hxr_cms_backend_stack.py
infrastructure/cdk/: app.py
infrastructure/cdk/helpers/: create_lambda.py  grant_permissions.py
infrastructure/cdk/stacks/: application_stack.py
lambda/application/: create_application.py  test_create_application.py
lambda/application/utils/: constants.py  helpers.py
scripts/: create_layers.sh
src/infrastructure/cdk/: app.py
src/lambda/application/: create_application.py  get_all_applications.py  get_application_by_id.py
src/lambda/auth/: change_password.py  lambda_authorizer.py  login.py
src/lambda/cognito/: create_cognito_user.py  create_initial_superadmin.py  invite_user.py
src/lambda/content/: create_content.py  get_all_contents_by_org_id.py  get_content_by_id.py  update_content_by_id.py
src/lambda/device/: create_device.py  get_all_devices_by_org_id.py  get_device_by_id.py  update_device_by_id.py
src/lambda/organization/: create_organization.py  get_all_organizations.py  get_organization_by_id.py  update_organization_by_id.py
src/lambda/playlist/: create_playlist.py  get_all_playlists_by_org_id.py  get_playlist_by_id.py  update_playlist_by_id.py
src/lambda/schedule/: create_schedule.py  get_all_schedules_by_org_id.py  get_schedule_by_id.py  update_schedule_by_id.py
tests/unit/: test_ik_hxr_cms_backend_stack.py
(+31 files in other folders)
